--- a/fprime-cmsis/cmake/toolchain/support/sources/samv71q21b/blinky.csolution.yml
+++ b/fprime-cmsis/cmake/toolchain/support/sources/samv71q21b/blinky.csolution.yml
@@ -16,6 +16,7 @@ solution:
           C-CPP:
             - -O0
             - -g
+            - -fdiagnostics-color=always
 
     # - type: Release
     #   debug: off
