--- a/fprime-cmsis/cmake/toolchain/support/sources/samv71q21b/blinky.Debug+SamV71-Xplained-Board.cbuild.yml
+++ b/fprime-cmsis/cmake/toolchain/support/sources/samv71q21b/blinky.Debug+SamV71-Xplained-Board.cbuild.yml
@@ -47,6 +47,7 @@ build:
       - -O0
       - -g
       - -Wall
+      - -fdiagnostics-color=always
     CPP:
       - -D__SAMV71Q21B__
       - -DARM_MATH_CM7
@@ -57,6 +58,7 @@ build:
       - -O0
       - -g
       - -Wall
+      - -fdiagnostics-color=always
     Link:
       - -specs=nosys.specs
       - -specs=nano.specs
@@ -69,6 +71,7 @@ build:
     - _RTE_
     - __SAMV71Q21B__
   add-path:
+    - hal_startup
     - RTE/RTOS
     - RTE/_Debug_SamV71-Xplained-Board
     - ${CMSIS_PACK_ROOT}/ARM/CMSIS-Compiler/2.1.0/include/gcc
@@ -355,19 +358,60 @@ build:
           category: header
           version: 2.3.0
   linker:
-    script: src/startup_samv71q21b.ld
+    script: hal_startup/startup_samv71q21b.ld
   groups:
-    - group: Device
+    - group: Device_Harmony_Periph
       add-path:
-        - RTE/Device/ATSAMV71Q21B
+        - harmony/sam_v71_xult
       files:
-        - file: RTE/Device/ATSAMV71Q21B/interrupts.c
+        - file: harmony/sam_v71_xult/peripheral/clk/plib_clk.c
           category: sourceC
-        - file: src/main.c
+        - file: harmony/sam_v71_xult/peripheral/pio/plib_pio.c
           category: sourceC
-        - file: src/freeRTOS_hooks.c
+        - file: harmony/sam_v71_xult/peripheral/nvic/plib_nvic.c
           category: sourceC
-        - file: src/Driver_GPIO.c
+        - file: harmony/sam_v71_xult/peripheral/twihs/master/plib_twihs0_master.c
+          category: sourceC
+        - file: harmony/sam_v71_xult/peripheral/efc/plib_efc.c
+          category: sourceC
+        - file: harmony/sam_v71_xult/peripheral/usart/plib_usart1.c
+          category: sourceC
+    - group: Device_Harmony_OS
+      add-path:
+        - harmony/sam_v71_xult
+      files:
+        - file: harmony/sam_v71_xult/osal/osal_freertos.c
+          category: sourceC
+    - group: Device_Harmony_Drivers
+      add-path:
+        - harmony/sam_v71_xult
+      files:
+        - file: harmony/sam_v71_xult/driver/i2c/src/drv_i2c.c
+          category: sourceC
+        - file: harmony/sam_v71_xult/driver/usart/src/drv_usart.c
+          category: sourceC
+    - group: Device_Harmony_HAL
+      add-path:
+        - harmony/sam_v71_xult
+      files:
+        - file: harmony/sam_v71_xult/interrupts.c
+          category: sourceC
+        - file: harmony/sam_v71_xult/freertos_hooks.c
+          category: sourceC
+    - group: CMSIS_IMPLS
+      add-path:
+        - ${CMSIS_PACK_ROOT}/ARM/CMSIS-Driver/2.10.0
+        - harmony/sam_v71_xult
+      files:
+        - file: cmsis/samv71_blink/impls/Driver_GPIO.c
+          category: sourceC
+        - file: cmsis/samv71_blink/impls/Driver_I2C.c
+          category: sourceC
+        - file: cmsis/samv71_blink/impls/Driver_USART.c
+          category: sourceC
+    - group: Device_HAL
+      files:
+        - file: hal_startup/main.c
           category: sourceC
   constructed-files:
     - file: RTE/_Debug_SamV71-Xplained-Board/RTE_Components.h
