overdue settings update

--- a/settings.ini
+++ b/settings.ini
@@ -1,13 +1,13 @@
 ; For more information: https://nasa.github.io/fprime/UsersGuide/user/settings.html
 [fprime]
 project_root: .
-framework_path: ./lib/fprime
-config_directory: ./config
+framework_path: ./deps/fprime
+config_directory: ./deps/fprime/config
 
 ; Default target toolchain for this deployment
 default_toolchain: arduinodue
 
-library_locations:  ./lib/fprime-arduino:./lib/fprime-baremetal
+library_locations:  ./deps/fprime-arduino:./deps/fprime-baremetal
 
 default_cmake_options:  FPRIME_ENABLE_FRAMEWORK_UTS=OFF
                         FPRIME_ENABLE_AUTOCODER_UTS=OFF
