Updated run.sh scripts to use try_docker_exec and more modular functions

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,7 +9,7 @@ services:
       - FORCE_COLOR=1
       - CMAKE_COLOR_DIAGNOSTICS=ON
       - NINJA_COLOR=1
-    tty: true
+    container_name: fprime-sam
     network_mode: host
     volumes:
       - ./:$SAM_WDIR
